@@ -53,6 +53,7 @@ NEWS
   * always define _GNU_SOURCE
   * Add some iterators for mod_magnet (fixes #1307)
   * Fix close_timeout_ts trigger (should finally fix lingering close)
+  * mod_rewrite: add url.rewrite-[repeat-]if-not-file to rewrite if file doesn't exist or is not a regular file (fixes #985, thx lucas aerbeydt)
 
 - 1.4.23 - 2009-06-19
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
